# aws-ecs-fullstack

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-eks.yml  deploy.yml
app/backend/: .dockerignore  Dockerfile  pyproject.toml
app/backend/app/: main.py
app/frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
app/frontend/src/: main.tsx
helm/fullstack/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.yaml
helm/fullstack/templates/: _helpers.tpl  external-secret.yaml  ingress.yaml  namespace.yaml  secret-store.yaml  serviceaccount.yaml
helm/fullstack/templates/backend/: deployment.yaml  hpa.yaml  service.yaml
helm/fullstack/templates/frontend/: deployment.yaml  hpa.yaml  service.yaml
terraform/: main.tf  outputs.tf  terraform.prod.tfvars  terraform.tfvars  variables.tf  versions.tf
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
